--- a/_posts/04.learnRoute/02.Jvm/2021-03-26-java-Jvm02.md
+++ b/_posts/04.learnRoute/02.Jvm/2021-03-26-java-Jvm02.md
@@ -78,31 +78,31 @@ public class HelloLoader {
 链接分为三个子阶段：验证 -> 准备 -> 解析
 
 1. 验证(Verify)  
-目的在于确保Class文件的字节流中包含信息符合当前虚拟机要求，保证被加载类的正确性，不会危害虚拟机自身安全  
-主要包括四种验证，文件格式验证，元数据验证，字节码验证，符号引用验证。  
-举例:使用 BinaryViewer软件查看字节码文件，其开头均为 CAFE BABE ，如果出现不合法的字节码文件，那么将会验证不通过。
+    1. 目的在于确保Class文件的字节流中包含信息符合当前虚拟机要求，保证被加载类的正确性，不会危害虚拟机自身安全  
+    2. 主要包括四种验证，文件格式验证，元数据验证，字节码验证，符号引用验证。  
+    3. 举例:使用 BinaryViewer软件查看字节码文件，其开头均为 CAFE BABE ，如果出现不合法的字节码文件，那么将会验证不通过。
 
 2. 准备(Prepare)  
-为类变量（static变量）分配内存并且设置该类变量的默认初始值，即零值  
-这里不包含用final修饰的static，因为final在编译的时候就会分配好了默认值，准备阶段会显式初始化  
-注意：这里不会为实例变量分配初始化，类变量会分配在方法区中，而实例变量是会随着对象一起分配到Java堆中  
-举例:代码：变量a在准备阶段会赋初始值，但不是1，而是0，在初始化阶段会被赋值为 1  
-```java
+    1. 为类变量（static变量）分配内存并且设置该类变量的默认初始值，即零值  
+    2. 这里不包含用final修饰的static，因为final在编译的时候就会分配好了默认值，准备阶段会显式初始化  
+    3. 注意：这里不会为实例变量分配初始化，类变量会分配在方法区中，而实例变量是会随着对象一起分配到Java堆中  
+    4. 举例:代码：变量a在准备阶段会赋初始值，但不是1，而是0，在初始化阶段会被赋值为 1  
+    ```java
 public class HelloApp {
-    private static int a = 1;//prepare：a = 0 ---> initial : a = 1
-    public static void main(String[] args) {
-        System.out.println(a);
-    }
+        private static int a = 1;//prepare：a = 0 ---> initial : a = 1
+        public static void main(String[] args) {
+            System.out.println(a);
+        }
 }
-```
+    ```
 
 3. 解析(Resolve)  
-将常量池内的符号引用转换为直接引用的过程  
-事实上，解析操作往往会伴随着JVM在执行完初始化之后再执行  
-符号引用就是一组符号来描述所引用的目标。符号引用的字面量形式明确定义在《java虚拟机规范》的class文件格式中。直接引用就是直接指向目标的指针、相对偏移量或一个间接定位到目标的句柄  
-解析动作主要针对类或接口、字段、类方法、接口方法、方法类型等。对应常量池中的CONSTANT Class info、CONSTANT Fieldref info、CONSTANT Methodref info等  
-符号引用:反编译 class 文件后可以查看符号引用，下面带`#`的就是符号引用  
-![符号引用](/assets/01.java提升计划/02.jvm/02/符号引用.png)
+    1. 将常量池内的符号引用转换为直接引用的过程  
+    2. 事实上，解析操作往往会伴随着JVM在执行完初始化之后再执行  
+    3. 符号引用就是一组符号来描述所引用的目标。符号引用的字面量形式明确定义在《java虚拟机规范》的class文件格式中。直接引用就是直接指向目标的指针、相对偏移量或一个间接定位到目标的句柄  
+    4. 解析动作主要针对类或接口、字段、类方法、接口方法、方法类型等。对应常量池中的CONSTANT Class info、CONSTANT Fieldref info、CONSTANT Methodref info等  
+    5. 符号引用:反编译 class 文件后可以查看符号引用，下面带`#`的就是符号引用    
+    ![符号引用](/assets/01.java提升计划/02.jvm/02/符号引用.png)
 
 ### 四、初始化阶段
 #### 一、类的初始化时机:  
@@ -126,12 +126,12 @@ public class HelloApp {
 
 ## 五、类加载器的分类
 ### 一、概述
-JVM严格来讲支持两种类型的类加载器 。分别为引导类加载器（Bootstrap ClassLoader）和自定义类加载器（User-Defined ClassLoader）  
-从概念上来讲，自定义类加载器一般指的是程序中由开发人员自定义的一类类加载器，但是Java虚拟机规范却没有这么定义，而是将所有派生于抽象类ClassLoader的类加载器都划分为自定义类加载器  
-无论类加载器的类型如何划分，在程序中我们最常见的类加载器始终只有3个，如下所示  
-![加载器分类](/assets/01.java提升计划/02.jvm/02/加载器分类.png)  
-我们尝试获取引导类加载器，获取到的值为 null ，这并不代表引导类加载器不存在，因为引导类加载器右 C/C++ 语言，我们获取不到  
-两次获取系统类加载器的值都相同：sun.misc.Launcher$AppClassLoader@18b4aac2 ，这说明系统类加载器是全局唯一的  
+1. JVM严格来讲支持两种类型的类加载器 。分别为引导类加载器（Bootstrap ClassLoader）和自定义类加载器（User-Defined ClassLoader）  
+2. 从概念上来讲，自定义类加载器一般指的是程序中由开发人员自定义的一类类加载器，但是Java虚拟机规范却没有这么定义，而是将所有派生于抽象类ClassLoader的类加载器都划分为自定义类加载器  
+3. 无论类加载器的类型如何划分，在程序中我们最常见的类加载器始终只有3个，如下所示  
+![加载器分类](/assets/01.java提升计划/02.jvm/02/加载器分类.png)   
+4. 我们尝试获取引导类加载器，获取到的值为 null ，这并不代表引导类加载器不存在，因为引导类加载器右 C/C++ 语言，我们获取不到  
+5. 两次获取系统类加载器的值都相同：sun.misc.Launcher$AppClassLoader@18b4aac2 ，这说明系统类加载器是全局唯一的  
 
 ### 二、虚拟机自带的加载器
 #### 启动类加载器(引导类加载器，Bootstrap ClassLoader)
