--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/01.任务一：自定义持久层框架/2021-05-16-lagou-java-01-01-01.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/01.任务一：自定义持久层框架/2021-05-16-lagou-java-01-01-01.md
@@ -87,8 +87,8 @@ public static void main(String[] args) {
 ## 1.3 自定义框架设计
 
 **使用端：**
->提供核心配置文件：
->sqlMapConfig.xml : 存放数据源信息，引入mapper.xml
+>提供核心配置文件：  
+>sqlMapConfig.xml : 存放数据源信息，引入mapper.xml  
 >Mapper.xml : sql语句的配置文件信息
 
 **框架端：**
@@ -100,9 +100,9 @@ public static void main(String[] args) {
 
 2. 解析配置文件
 
->创建sqlSessionFactoryBuilder类：
->方法：sqlSessionFactory build()：
->1. 使用dom4j解析配置文件，将解析出来的内容封装到Configuration和MappedStatement中
+>创建sqlSessionFactoryBuilder类：  
+>方法：sqlSessionFactory build()：  
+>1. 使用dom4j解析配置文件，将解析出来的内容封装到Configuration和MappedStatement中  
 >2. 创建SqlSessionFactory的实现类DefaultSqlSession
 
 3. 创建SqlSessionFactory：
@@ -111,14 +111,14 @@ public static void main(String[] args) {
 
 4. 创建sqlSession接口及实现类：主要封装crud方法
 
->方法：selectList(String statementId,Object param)：查询所有
->方法：selectOne(String statementId,Object param)：查询单个
+>方法：selectList(String statementId,Object param)：查询所有  
+>方法：selectOne(String statementId,Object param)：查询单个  
 >具体实现：封装JDBC完成对数据库表的查询操作
 
 5. 涉及到的设计模式：Builder构建者设计模式、工厂模式、代理模式
 
 ## 1.4 自定义框架设计
-在使用端项目中创建配置配置文件
+在使用端项目中创建配置配置文件  
 创建 sqlMapConfig.xml
 ```xml
 <configuration>
@@ -134,8 +134,7 @@ public static void main(String[] args) {
 
 mapper.xml
 
-```xml
-<code> 
+```xml 
 <mapper namespace="User">
     <select id="selectOne" paramterType="com.lagou.pojo.User"
     resultType="com.lagou.pojo.User">
@@ -145,7 +144,7 @@ mapper.xml
     <select id="selectList" resultType="com.lagou.pojo.User">
         select * from user
     </select>
-</mapper></code> 
+</mapper>
 ```
 
 User实体
@@ -283,7 +282,8 @@ public class MappedStatement {
 Resources
 ```java
 public class Resources {
-    public static InputStream getResourceAsSteam(String path){ InputStream resourceAsStream =Resources.class.getClassLoader.getResourceAsStream(path);
+    public static InputStream getResourceAsSteam(String path){ 
+        InputStream resourceAsStream =Resources.class.getClassLoader.getResourceAsStream(path);
         return resourceAsStream;
     }
 }
@@ -389,7 +389,7 @@ public class XMLMapperBuilder {
 }
 ```
 
-sqlSessionFactory 接口及D efaultSqlSessionFactory 实现类
+sqlSessionFactory 接口及 DefaultSqlSessionFactory 实现类
 ```java
 public interface SqlSessionFactory {
     public SqlSession openSession();
