任务二笔记

--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "MyBatis基础回顾及高级应用"
-date:   2021-05-23
+date:   2021-05-25
 categories: lagou
 tags: lagou
 ---
@@ -21,3 +21,301 @@ tags: lagou
 
  
 # 任务2、MyBatis基础回顾及高级应用
+## 第二部分：Mybatis相关概念
+### 2.1 对象/关系数据库映射(ORM)
+ORM全称Object/Relation Mapping：表示对象-关系映射的缩写  
+ORM完成面向对象的编程语言到关系数据库的映射。当ORM框架完成映射后，程序员既可以利用面向对象程序设计语言的简单易用性，又可以利用关系数据库的技术优势。ORM把关系数据库包装成面向对象的模型。ORM框架是面向对象设计语言与关系数据库发展不同步时的中间解决方案。采用ORM框架后，应用程序不再直接访问底层数据库，而是以面向对象的放松来操作持久化对象，而ORM框架则将这些面向对象的操作转换成底层SQL操作。ORM框架实现的效果：把对持久化对象的保存、修改、删除 等操作，转换为对数据库的操作
+
+### 2.2 Mybatis简介
+MyBatis是一款优秀的基于ORM的半自动轻量级持久层框架，它支持定制化SQL、存储过程以及高级映射。MyBatis避免了几乎所有的JDBC代码和手动设置参数以及获取结果集。MyBatis可以使用简单的XML或注解来配置和映射原生类型、接口和Java的POJO （Plain Old Java Objects,普通老式Java对 象）为数据库中的记录。
+
+### 2.3 Mybatis历史
+原是apache的一个开源项目iBatis, 2010年6月这个项目由apache software foundation 迁移到了google code，随着开发团队转投Google Code旗下，ibatis3.x正式更名为Mybatis ，代码于2013年11月迁移到Github。iBATIS一词来源于“internet”和“abatis”的组合，是一个基于Java的持久层框架。iBATIS提供的持久层框架包括SQL Maps和Data Access Objects(DAO)
+
+### 2.4 Mybatis优势
+Mybatis是一个半自动化的持久层框架，对开发人员开说，核心sql还是需要自己进行优化，sql和java编码进行分离，功能边界清晰，一个专注业务，一个专注数据。  
+分析图示如下：  
+![mybatis分析](/assets/lagou/第一阶段/第一模块/mybatis分析.jpg)
+
+## 第三部分：Mybatis基本应用
+### 3.1 快速入门
+MyBatis官网地址：http://www.mybatis.org/mybatis-3/  
+
+#### 3.1.1 开发步骤
+>1. 添加MyBatis的坐标
+>2. 创建user数据表
+>3. 编写User实体类
+>4. 编写映射文件UserMapper.xml
+>5. 编写核心文件SqlMapConfig.xml
+>6. 编写测试类
+
+#### 3.1.2 环境搭建
+
+导入MyBatis的坐标和其他相关坐标
+```xml
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+<!--mybatis坐标-->
+<dependency>
+    <groupId>org.mybatis</groupId>
+    <artifactId>mybatis</artifactId>
+    <version>3.4.5</version>
+</dependency>
+<!--mysql驱动坐标-->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+    <scope>runtime</scope>
+</dependency>
+<!--单元测试坐标-->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+</dependency>
+<!--日志坐标-->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.12</version>
+</dependency>
+```
+
+创建user数据表:略
+编写User实体:略
+编写UserMapper映射文件  
+```xml
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" 
+"http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+<mapper namespace="userMapper">
+    <select id="findAll" resultType="com.lagou.domain.User">
+        select * from User
+    </select>
+</mapper>
+```
+
+编写MyBatis核心文件
+```xml
+<!DOCTYPE configuration PUBLIC "-//mybatis.org//DTD Config 3.0//EN"
+"http://mybatis.org/dtd/mybatis-3-config.dtd">
+<configuration>
+    <environments default="development">
+        <environment id="development">
+            <transactionManager type="JDBC"/>
+            <dataSource type="POOLED">
+                <property name="driver" value="com.mysql.jdbc.Driver"/>
+                <property name="url" value="jdbc:mysql:///test"/>
+                <property name="username" value="root"/>
+                <property name="password" value="root"/>
+            </dataSource>
+        </environment>
+    </environments>
+    <mappers>
+        <mapper resource="com/lagou/mapper/UserMapper.xml"/>
+    </mappers>
+</configuration>
+```
+
+ 编写测试代码
+```java
+//加载核心配置文件
+InputStream resourceAsStream = Resources.getResourceAsStream("SqlMapConfig.xml");
+//获得sqlSession工厂对象
+SqlSessionFactory sqlSessionFactory = new SqlSessionFactoryBuilder().build(resourceAsStream);
+//获得sqlSession对象
+SqlSession sqlSession = sqlSessionFactory.openSession();
+//执行sql语句
+List<User> userList = sqlSession.selectList("userMapper.findAll");
+//打印结果
+System.out.println(userList);
+//释放资源
+sqlSession.close();
+```
+
+#### 3.1.3 MyBatis的增删改查操作
+1. 编写UserMapper映射文件:略
+2. 编写插入实体User的代码:略
+3. 插入操作注意问题  
+
+>插入语句使用insert标签
+>在映射文件中使用parameterType属性指定要插入的数据类型
+>Sql语句中使用#{实体属性名}方式引用实体中的属性值
+>插入操作使用的API是sqlSession.insert(“命名空间.id”,实体对象);
+>插入操作涉及数据库数据变化，所以要使用sqlSession对象显示的提交事务，即sqlSession.commit()
+
+4. 修改操作注意问题
+
+>修改语句使用update标签
+>修改操作使用的API是sqlSession.update(“命名空间.id”,实体对象);
+
+5. 删除操作注意问题
+
+>删除语句使用delete标签
+>Sql语句中使用#{任意字符串}方式引用传递的单个参数
+>删除操作使用的API是sqlSession.delete(“命名空间.id”,Object);
+
+#### 3.1.4 MyBatis的映射文件概述
+![配置文件概述](/assets/lagou/第一阶段/第一模块/配置文件概述.jpg)
+
+#### 3.1.5 入门核心配置文件分析
+![配置文件关系](/assets/lagou/第一阶段/第一模块/配置文件关系.jpg)
+
+MyBatis常用配置解析  
+**1.environments标签:数据库环境的配置，支持多环境配置**  
+![environments](/assets/lagou/第一阶段/第一模块/environments.jpg)  
+其中，事务管理器（transactionManager）类型有两种：  
+>JDBC：这个配置就是直接使用了JDBC的提交和回滚设置，它依赖于从数据源得到的连接来管理事务作用域。
+>MANAGED：这个配置几乎没做什么。它从来不提交或回滚一个连接，而是让容器来管理事务的整个生命周期（比如 JEE 应用服务器的上下文）。默认情况下它会关闭连接，然而一些容器并不希望这样，因此需要将 closeConnection 属性设置为false来阻止它默认的关闭行为。
+
+其中，数据源（dataSource）类型有三种：  
+>UNPOOLED：这个数据源的实现只是每次被请求时打开和关闭连接。
+>POOLED：这种数据源的实现利用“池”的概念将 JDBC 连接对象组织起来。
+>JNDI：这个数据源的实现是为了能在如 EJB或应用服务器这类容器中使用，容器可以集中或在外部配置数据源，然后放置一个 JNDI 上下文的引用。
+
+**2.mapper标签:该标签的作用是加载映射的，加载方式有如下几种：**
+```xml
+使用相对于类路径的资源引用，例如：  
+<mapper resource="org/mybatis/builder/AuthorMapper.xml"/>
+使用完全限定资源定位符（URL），例如：
+<mapper url="file:///var/mappers/AuthorMapper.xml"/>
+使用映射器接口实现类的完全限定类名，例如：
+<mapper class="org.mybatis.builder.AuthorMapper"/>
+将包内的映射器接口实现全部注册为映射器，例如：
+<package name="org.mybatis.builder"/>
+```
+
+#### 3.1.6 Mybatis相应API介绍
+1. SqlSession工厂构建器SqlSessionFactoryBuilder  
+    常用API：SqlSessionFactory build(InputStream inputStream)  
+    通过加载mybatis的核心文件的输入流的形式构建一个SqlSessionFactory对象
+    ```java
+    String resource = "org/mybatis/builder/mybatis-config.xml";
+    InputStream inputStream = Resources.getResourceAsStream(resource);
+    SqlSessionFactoryBuilder builder = new SqlSessionFactoryBuilder();
+    SqlSessionFactory factory = builder.build(inputStream);
+    ```
+
+    其中，Resources 工具类，这个类在 org.apache.ibatis.io 包中。Resources 类帮助你从类路径下、文件系统或一个 web URL 中加载资源文件
+
+2. SqlSession工厂对象SqlSessionFactory
+SqlSessionFactory 有多个个方法创建SqlSession 实例。常用的有如下两个：
+
+    >openSession():会默认开启一个事务,也就是意味着需要手动提交该事务,更新操作数据才会持久化到数据库中
+
+    >openSession(boolean autoCommit):参数为是否自动提交,如果设置为true,那么不需要手动提交事务 
+
+3. SqlSession会话对象
+    SqlSession 实例在 MyBatis中是非常强大的一个类。在这里你会看到所有执行语句、提交或回滚事务和获取映射器实例的方法。
+    ```java
+执行语句的方法主要有：
+<T> T selectOne(String statement, Object parameter)
+<E> List<E> selectList(String statement, Object parameter)
+int insert(String statement, Object parameter)
+int update(String statement, Object parameter)
+int delete(String statement, Object parameter)
+操作事务的方法主要有：
+void commit()
+void rollback()
+    ```
+
+### 3.1 快速入门
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
