--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "MyBatis基础回顾及高级应用"
-date:   2021-05-25
+date:   2021-05-20
 categories: lagou
 tags: lagou
 ---
@@ -145,22 +145,22 @@ sqlSession.close();
 2. 编写插入实体User的代码:略
 3. 插入操作注意问题  
 
->插入语句使用insert标签
->在映射文件中使用parameterType属性指定要插入的数据类型
->Sql语句中使用#{实体属性名}方式引用实体中的属性值
->插入操作使用的API是sqlSession.insert(“命名空间.id”,实体对象);
->插入操作涉及数据库数据变化，所以要使用sqlSession对象显示的提交事务，即sqlSession.commit()
+>插入语句使用insert标签  
+>在映射文件中使用parameterType属性指定要插入的数据类型  
+>Sql语句中使用#{实体属性名}方式引用实体中的属性值  
+>插入操作使用的API是sqlSession.insert(“命名空间.id”,实体对象);  
+>插入操作涉及数据库数据变化，所以要使用sqlSession对象显示的提交事务，即sqlSession.commit()  
 
 4. 修改操作注意问题
 
->修改语句使用update标签
->修改操作使用的API是sqlSession.update(“命名空间.id”,实体对象);
+>修改语句使用update标签  
+>修改操作使用的API是sqlSession.update(“命名空间.id”,实体对象);  
 
 5. 删除操作注意问题
 
->删除语句使用delete标签
->Sql语句中使用#{任意字符串}方式引用传递的单个参数
->删除操作使用的API是sqlSession.delete(“命名空间.id”,Object);
+>删除语句使用delete标签  
+>Sql语句中使用#{任意字符串}方式引用传递的单个参数  
+>删除操作使用的API是sqlSession.delete(“命名空间.id”,Object);  
 
 #### 3.1.4 MyBatis的映射文件概述
 ![配置文件概述](/assets/lagou/第一阶段/第一模块/配置文件概述.jpg)
@@ -172,12 +172,12 @@ MyBatis常用配置解析
 **1.environments标签:数据库环境的配置，支持多环境配置**  
 ![environments](/assets/lagou/第一阶段/第一模块/environments.jpg)  
 其中，事务管理器（transactionManager）类型有两种：  
->JDBC：这个配置就是直接使用了JDBC的提交和回滚设置，它依赖于从数据源得到的连接来管理事务作用域。
+>JDBC：这个配置就是直接使用了JDBC的提交和回滚设置，它依赖于从数据源得到的连接来管理事务作用域。  
 >MANAGED：这个配置几乎没做什么。它从来不提交或回滚一个连接，而是让容器来管理事务的整个生命周期（比如 JEE 应用服务器的上下文）。默认情况下它会关闭连接，然而一些容器并不希望这样，因此需要将 closeConnection 属性设置为false来阻止它默认的关闭行为。
 
 其中，数据源（dataSource）类型有三种：  
->UNPOOLED：这个数据源的实现只是每次被请求时打开和关闭连接。
->POOLED：这种数据源的实现利用“池”的概念将 JDBC 连接对象组织起来。
+>UNPOOLED：这个数据源的实现只是每次被请求时打开和关闭连接。  
+>POOLED：这种数据源的实现利用“池”的概念将 JDBC 连接对象组织起来。  
 >JNDI：这个数据源的实现是为了能在如 EJB或应用服务器这类容器中使用，容器可以集中或在外部配置数据源，然后放置一个 JNDI 上下文的引用。
 
 **2.mapper标签:该标签的作用是加载映射的，加载方式有如下几种：**
@@ -215,30 +215,57 @@ SqlSessionFactory 有多个个方法创建SqlSession 实例。常用的有如下
 3. SqlSession会话对象
     SqlSession 实例在 MyBatis中是非常强大的一个类。在这里你会看到所有执行语句、提交或回滚事务和获取映射器实例的方法。
     ```java
-执行语句的方法主要有：
-<T> T selectOne(String statement, Object parameter)
-<E> List<E> selectList(String statement, Object parameter)
-int insert(String statement, Object parameter)
-int update(String statement, Object parameter)
-int delete(String statement, Object parameter)
-操作事务的方法主要有：
-void commit()
-void rollback()
+    执行语句的方法主要有：
+    <T> T selectOne(String statement, Object parameter)
+    <E> List<E> selectList(String statement, Object parameter)
+    int insert(String statement, Object parameter)
+    int update(String statement, Object parameter)
+    int delete(String statement, Object parameter)
+    操作事务的方法主要有：
+    void commit()
+    void rollback()
     ```
 
-### 3.1 快速入门
+### 3.2 Mybatis的Dao层实现
+#### 3.2.1 传统开发方式
 
+编写UserDao接口
+```java
+public interface UserDao {
+    List<User> findAll() throws IOException;
+}
+```
 
+编写UserDaoImpl实现
+```java
+public class UserDaoImpl implements UserDao {
+    public List<User> findAll() throws IOException {
+        InputStream resourceAsStream = Resources.getResourceAsStream("SqlMapConfig.xml");
+        SqlSessionFactory sqlSessionFactory = new SqlSessionFactoryBuilder().build(resourceAsStream);
+        SqlSession sqlSession = sqlSessionFactory.openSession();
+        List<User> userList = sqlSession.selectList("userMapper.findAll");
+        sqlSession.close();
+        return userList;
+    }
+}
+```
 
+#### 3.2.2 代理开发方式
 
+**代理开发方式介绍**
+采用 Mybatis的代理开发方式实现DAO层的开发，这种方式是我们后面进入企业的主流。  
+Mapper 接口开发方法只需要程序员编写Mapper 接口（相当于Dao 接口），由Mybatis 框架根据接口   
+定义创建接口的动态代理对象，代理对象的方法体同上边Dao接口实现类方法。  
+>Mapper 接口开发需要遵循以下规范：
+>1) Mapper.xml文件中的namespace与mapper接口的全限定名相同
+>2) Mapper接口方法名和Mapper.xml中定义的每个statement的id相同
+>3) Mapper接口方法的输入参数类型和mapper.xml中定义的每个sql的parameterType的类型相同
+>4) Mapper接口方法的输出参数类型和mapper.xml中定义的每个sql的resultType的类型相同
 
-
-
-
-
-
-
-
+## 第四部分：Mybatis配置文件深入
+### 4.1 核心配置文件SqlMapConfig.xml
+#### 4.1.1 MyBatis核心配置文件层级关系
+![配置文件关系](/assets/lagou/第一阶段/第一模块/配置文件关系.jpg)
 
 
 
