--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
@@ -256,34 +256,82 @@ public class UserDaoImpl implements UserDao {
 采用 Mybatis的代理开发方式实现DAO层的开发，这种方式是我们后面进入企业的主流。  
 Mapper 接口开发方法只需要程序员编写Mapper 接口（相当于Dao 接口），由Mybatis 框架根据接口   
 定义创建接口的动态代理对象，代理对象的方法体同上边Dao接口实现类方法。  
->Mapper 接口开发需要遵循以下规范：
->1) Mapper.xml文件中的namespace与mapper接口的全限定名相同
->2) Mapper接口方法名和Mapper.xml中定义的每个statement的id相同
->3) Mapper接口方法的输入参数类型和mapper.xml中定义的每个sql的parameterType的类型相同
->4) Mapper接口方法的输出参数类型和mapper.xml中定义的每个sql的resultType的类型相同
+>Mapper 接口开发需要遵循以下规范：  
+>1) Mapper.xml文件中的namespace与mapper接口的全限定名相同  
+>2) Mapper接口方法名和Mapper.xml中定义的每个statement的id相同  
+>3) Mapper接口方法的输入参数类型和mapper.xml中定义的每个sql的parameterType的类型相同  
+>4) Mapper接口方法的输出参数类型和mapper.xml中定义的每个sql的resultType的类型相同  
 
 ## 第四部分：Mybatis配置文件深入
 ### 4.1 核心配置文件SqlMapConfig.xml
 #### 4.1.1 MyBatis核心配置文件层级关系
 ![配置文件关系](/assets/lagou/第一阶段/第一模块/配置文件关系.jpg)
 
+#### 4.1.2 MyBatis常用配置解析
+**3.Properties标签标签**  
+实际开发中，习惯将数据源的配置信息单独抽取成一个properties文件，该标签可以加载额外配置的properties文件  
+![properties标签](/assets/lagou/第一阶段/第一模块/properties标签.jpg)
 
+**4.typeAliases标签**  
+类型别名是为Java 类型设置一个短的名字。原来的类型名称配置如下  
+![typeAliases](/assets/lagou/第一阶段/第一模块/typeAliases.jpg)
 
+### 4.2 映射配置文件mapper.xml
+**动态sql语句**  
+Mybatis 的映射文件中，前面我们的 SQL 都是比较简单的，有些时候业务逻辑复杂时，我们的 SQL是动态变化的，此时在前面的学习中我们的 SQL 就不能满足要求了。
 
+动态 SQL 之 if 标签
+```xml
+<select id="findByCondition" parameterType="user" resultType="user">
+    select * from User
+    <where>
+        <if test="id!=0">
+            and id=#{id}
+        </if>
+        <if test="username!=null">
+            and username=#{username}
+        </if>
+    </where>
+</select>
+```
 
+动态 SQL 之 foreach 标签
+foreach标签的属性含义如下：  
+>collection：代表要遍历的集合元素，注意编写时不要写#{}  
+>open：代表语句的开始部分  
+>close：代表结束部分  
+>item：代表遍历集合的每个元素，生成的变量名  
+>sperator：代表分隔符  
 
+```xml
+<select id="findByIds" parameterType="list" resultType="user">
+    select * from User
+    <where>
+        <foreach collection="list" open="id in(" close=")" item="id" separator=",">
+            #{id}
+        </foreach>
+    </where>
+</select>
+```
 
+SQL片段抽取
+```xml
+<!--抽取sql片段简化编写-->
+<sql id="selectUser"> select * from User </sql>
+<select id="findById" parameterType="int" resultType="user">
+    <include refid="selectUser"></include> where id=#{id}
+</select>
+<select id="findByIds" parameterType="list" resultType="user">
+    <include refid="selectUser"></include>
+    <where>
+        <foreach collection="array" open="id in(" close=")" item="id" separator=",">
+            #{id}
+        </foreach>
+    </where>
+</select>
+```
 
-
-
-
-
-
-
-
-
-
-
+## 第五部分：Mybatis复杂映射开发
 
 
 
